--- a/calculator/src/main/resources/static/calculator.html
+++ b/calculator/src/main/resources/static/calculator.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kalkulátor</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+        input { padding: 10px; margin: 5px; width: 80px; text-align: center; }
+        button { padding: 10px 20px; margin: 5px; cursor: pointer; }
+        #result { margin-top: 20px; font-size: 24px; font-weight: bold; }
+    </style>
 </head>
 <body>
-$END$
+
+<h1>Egyszerű Kalkulátor</h1>
+
+<input type="number" id="num1" placeholder="Szám 1">
+<input type="number" id="num2" placeholder="Szám 2">
+
+<br>
+<button onclick="calculate('add')">+</button>
+<button onclick="calculate('subtract')">-</button>
+<button onclick="calculate('multiply')">×</button>
+<button onclick="calculate('divide')">÷</button>
+
+<h2 id="result">Eredmény: </h2>
+
+<script>
+    function calculate(operation) {
+        let num1 = document.getElementById("num1").value;
+        let num2 = document.getElementById("num2").value;
+
+        if (num1 === "" || num2 === "") {
+            alert("Kérlek, adj meg két számot!");
+            return;
+        }
+
+        let url = `http://localhost:8080/api/calculator/${operation}?a=${num1}&b=${num2}`;
+
+        fetch(url)
+            .then(response => {
+                if (!response.ok) {
+                    return response.text().then(text => { throw new Error(text); });
+                }
+                return response.json();
+            })
+            .then(data => {
+                document.getElementById("result").innerText = `Eredmény: ${data}`;
+            })
+            .catch(error => {
+                document.getElementById("result").innerText = "Hiba: " + error.message;
+            });
+    }
+</script>
+
 </body>
 </html>
